# Russian-roulette

./: CMakeLists.txt  Functions.cpp  Functions.h  README.md  Russian Roulette.cpp  RussianRoulette.cpp
